--- a/mac/Workman.bundle/Contents/Info.plist
+++ b/mac/Workman.bundle/Contents/Info.plist
@@ -5,45 +5,45 @@
 	<key>CFBundleIdentifier</key>
 	<string>org.sil.ukelele.keyboardlayout.workman</string>
 	<key>CFBundleName</key>
-	<string>Workman</string>
+	<string>Kuality</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
-	<key>KLInfo_Workman</key>
+	<key>KLInfo_Kuality</key>
 	<dict>
 		<key>TISInputSourceID</key>
 		<string>org.sil.ukelele.keyboardlayout.workman.workman</string>
 		<key>TISIntendedLanguage</key>
 		<string>en-US</string>
 	</dict>
-	<key>KLInfo_Workman Extended</key>
+	<key>KLInfo_Kuality Extended</key>
 	<dict>
 		<key>TISInputSourceID</key>
 		<string>org.sil.ukelele.keyboardlayout.workman.workmanextended</string>
 		<key>TISIntendedLanguage</key>
 		<string>en-US</string>
 	</dict>
-	<key>KLInfo_Workman-IO</key>
+	<key>KLInfo_Kuality-IO</key>
 	<dict>
 		<key>TISInputSourceID</key>
 		<string>org.sil.ukelele.keyboardlayout.workman.workman-io</string>
 		<key>TISIntendedLanguage</key>
 		<string>en-US</string>
 	</dict>
-	<key>KLInfo_Workman-P</key>
+	<key>KLInfo_Kuality-P</key>
 	<dict>
 		<key>TISInputSourceID</key>
 		<string>org.sil.ukelele.keyboardlayout.workman.workman-p</string>
 		<key>TISIntendedLanguage</key>
 		<string>en-US</string>
 	</dict>
-	<key>KLInfo_Workman-P Extended</key>
+	<key>KLInfo_Kuality-P Extended</key>
 	<dict>
 		<key>TISInputSourceID</key>
 		<string>org.sil.ukelele.keyboardlayout.workman.workman-pextended</string>
 		<key>TISIntendedLanguage</key>
 		<string>en-US</string>
 	</dict>
-	<key>KLInfo_Workman-Dead</key>
+	<key>KLInfo_Kuality-Dead</key>
 	<dict>
 		<key>TISInputSourceID</key>
 		<string>org.sil.ukelele.keyboardlayout.workman.workman-dead</string>
