--- a/mac/Workman.bundle/Contents/version.plist
+++ b/mac/Workman.bundle/Contents/version.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>ProjectName</key>
-	<string>Workman</string>
+	<string>Kuality</string>
 	<key>SourceVersion</key>
 	<string>1000</string>
 </dict>
