--- a/windows/pkl/workman/layout.ini
+++ b/windows/pkl/workman/layout.ini
@@ -5,8 +5,8 @@
 ;
 
 [informations]
-layoutname           = Workman
-layoutcode           = Workman
+layoutname           = Kuality
+layoutcode           = Kuality
 localeid             = 00000409
 
 copyright            = Public Domain
@@ -15,7 +15,7 @@ homepage             = http://www.workmanlayout.com
 version              = 1.0
 
 generated_at         = Fri Jan 6 19:18:00 2011
-generated_from       = Workman.klc
+generated_from       = Kuality.klc
 modified_after_generate = yes
 
 
